framework.css
/* ... */
textarea {
	overflow: auto; /* Removes default vertical scrollbar in IE6/7/8/9 */
	padding-left: 3px;
	vertical-align: top; /* Improves readability and alignment in all browsers */
	width: 100%;
}

/*--------------------------------------------------------------
5.0 General layout
--------------------------------------------------------------*/
.site-widgets {
	padding: 0 10px;
	width: 100%;
}

.site-widgets .widget {
	margin: 0 auto 10px;
}

.site-branding {
	padding: 1.75em 3.125%;
	background-size: cover;
	text-align: center;
	clear: both;
}

.site-logo {
	display: inline-block;
}

.site-logo img {
	max-width: 300px;
	max-height: 120px;
}

.site-title {
	margin: 0;
	font-size: 48px;
	font-weight: bold;
	line-height: 1.25;
	float: none;
	clear: none;
}

.site-title a,
.site-title a:hover {
	color: inherit;
}

.site-description {
	font-size: 20px;
	margin: 0;
	float: none;
	clear: none;
}

.content-area,
.widecolumn,
.widget-area {
	width: 100%;
	padding: 10px;
	float: left;
	clear: both;
}

.homepage-widgets {
	overflow: hidden;
}

.site-footer {
	overflow: hidden;
	position: relative;
}

.site-footer .footer-widget-region {
	word-wrap: break-word;
}

.site-info {
	padding: 5px 2% 50px;
	position: relative;
}

@media screen and (min-width: 601px) {
	.site-widgets {
		padding: 0 20px;
	}
	.site-branding {
		padding: 1.75em 2%;
		text-align: left;
	}

	.site-branding hgroup {
		overflow: hidden;
	}

	.site-logo {
		float: left;
	}

	.content-area,
	.wide-column,
	.widget-area {
		clear: none;
		padding: 0;
	}

	.content-area {
		width: 62%;
	}

	.content-area-full-width,
	.widecolumn {
		width: 100%;
	}

	.widget-area {
		width: 30%;
		float: right;
	}

	.site-copyright {
		float: left;
	}

	.site-credit {
		float: right;
	}

	.site-widgets .widget {
		margin-bottom: 20px;
	}
}

@media screen and (min-width: 801px) {
	.site-footer .footer-widget-region {
		width: 33%;
		float: left;
	}

	.site-footer .footer-widget-region:last-child {
		width: 34%;
		float: right;
	}
}

@media screen and (min-width: 1025px) {
	.site-header,
	.site-content,
	.site-footer,
	.site-info {
		margin: 0 auto;
		width: 1000px;
		max-width: 100%;
	}

	.site-info {
		padding: 5px 0 50px;
	}

	.site-branding,
	.site-widgets {
		width: auto;
	}

	.site-branding {
		margin: 1.75em auto 0;
		padding: 1.75em 0;
	}

	.site-widgets {
		padding: 0;
	}
}

/*--------------------------------------------------------------
5.1 Links
--------------------------------------------------------------*/
a {
	text-decoration: none;
}

/*--------------------------------------------------------------
5.2 Menus
--------------------------------------------------------------*/
.main-navigation {
	clear: both;
	display: block;
	float: left;
	width: 100%;
}

.main-navigation .menu-toggle {
	width: 100%;
	border-radius: 0;
}

.main-navigation .menu-toggle .dashicons {
	font-size: 20px;
}

.main-navigation ul {
	list-style: none;
	margin: 0;
}

.main-navigation li {
	float: left;
	position: relative;
	margin: 0;
}

.main-navigation a {
	display: block;
	padding: 0.625em 10px;
	font-size: 14px;
}

/* Nested menu */
.main-navigation ul ul {
	position: absolute;
	margin: 0;
	top: auto;
	left: auto;
	z-index: 99999;
	display: none;
}

.main-navigation ul ul ul {
	left: -999em;
	top: 0;
}

.main-navigation ul ul li {
	width: 100%;
}

.main-navigation ul ul a {
	min-width: 200px;
}

.main-navigation ul li:hover > ul {
	display: block;
}

.main-navigation ul ul li:hover > ul {
	left: 100%;
}

.main-navigation .search-form {
	margin: 0;
	display: none;
}

.main-navigation .search-form .search-submit {
	font-size: 16px;
}

/* Small menu */
.menu-toggle {
	display: none;
}

.site-main .comment-navigation,
.site-main .paging-navigation,
.site-main .post-navigation {
	margin: 0 0 1.25em;
	overflow: hidden;
    clear: both;
}

.comment-navigation .nav-previous,
.paging-navigation .nav-previous,
.post-navigation .nav-previous {
	float: left;
	width: 50%;
}

.comment-navigation .nav-next,
.paging-navigation .nav-next,
.post-navigation .nav-next {
	float: right;
	text-align: right;
	width: 50%;
}

@media screen and (max-width: 600px) {
	.main-navigation .nav-menu {
		display: none;
	}

	.menu-toggle,
	.main-navigation.toggled .nav-menu {
		display: block;
	}

	.main-navigation li {
		float: none;
	}

	.main-navigation ul ul {
		display: block;
		position: static;
		width: 100%;
	}

	.main-navigation.toggled .search-form {
		display: block;
	}
}

@media screen and (min-width: 601px) {
	.main-navigation .search-form {
		float: right;
		display: block;
	}

	.main-navigation .search-form .search-field,
	.main-navigation .search-form .search-submit {
		width: auto;
	}
}


/*--------------------------------------------------------------
6.0 Accessibility
--------------------------------------------------------------*/
/* Text meant only for screen readers */
.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
}

.screen-reader-text:hover,
.screen-reader-text:active,
.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-size: 1.4rem;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar */
}

/*--------------------------------------------------------------
7.0 Alignments
--------------------------------------------------------------*/
.alignleft {
	display: inline;
	float: left;
	margin-right: 1.25em;
}

.alignright {
	display: inline;
	float: right;
	margin-left: 1.25em;
}

.aligncenter {
	clear: both;
	display: block;
	margin: 0 auto;
}
/* ... */

